@@ -23,8 +23,9 @@ We want our patches cooked as follows:
   <li>No complete files, only diffs
   <li>Unified diff (<tt>diff -u</tt>). 
   <li>ChangeLog entries
-  <li>patches for Documentation/topdocs/AUTHORS.texi and THANKS, if
-    appropriate
+  
+  <li>patches for <tt>Documentation/topdocs/AUTHORS.texi</tt> and
+    <tt>THANKS</tt>, if appropriate.
 </ul>
 
 
@@ -33,33 +34,10 @@ the source code for TODO for inspiration.  Good luck.
 
 <h2>&ldquo;But I am not brilliant!&rdquo</h2>
 
-There is lots to do, and not all of it requires programming. For
-example, you could
+There is lots to do, and not all of it requires programming. Read our
+<a href="call-for-help.txt">call for help</a> for more information.
 
 
-<ul>
-  <li>help translating.  See
-    <a
-       href="http://www2.iro.umontreal.ca/~pinard/po/registry.cgi?domain=lilypond">
-      http://www2.iro.umontreal.ca/~pinard/po/registry.cgi?domain=lilypond</a>
-
-  <li>
-    help proofreading and editing the documentation. The user manual is
-    found in <tt>lilypond/Documentation/user/</tt>, in the
-    <tt>*.itely</tt> files.
-    
-  <li>
-    help <a href=../packaging.html>packaging</a>.
-
-  <li> help entering music for the
-    <a href=http://www.mutopiaproject.org/>Mutopia project</a>.
-
-<li>
-  jazz up our website.  It is available from CVS, run
-  <pre>
-    cvs -z3 -d :ext:anoncvs@subversions.gnu.org:/cvsroot/lilypond co newweb
-  </pre>
-</ul>
 
 <h2>Submitting patches</h2>
 <p>
