@@ -55,30 +55,24 @@
     <td width="55%">
 
       <dl>
-	
-	<dt>April 17, 2004</dt>
-	<dd>
-	  LilyPond 2.2.0 is now available
-	  on Windows, and should find its way to the Cygwin mirrors
-	  soon
-	</dd>
-	
-	<dt>April 12, 2004</dt>
-	<dd>
-	  LilyPond 2.3.0 is the first release in the 2.3 cycle.  The
-	  focus for 2.3 is page layout, so instrumentalists can force
-	  parts to have page breaks at sane turning points.  This
-	  release is <em>experimental</em>; expect things to break!
-	  More info in the
-	  <a href="@DOC@/v2.3/Documentation/topdocs/out-www/NEWS.html">release
-	    notes</a>.  Download <a href="download/#2.3">here</a>.
-	</dd>
-	
-	<dt>April 8, 2004</dt>
-	<dd>
-	  A French article on the new LilyPond release appeared on
-	  <a href="http://linuxfr.org/2004/04/08/15968.html">linuxfr.org</a>.
-	</dd>
+      <dt>May 3, 2004 </dt>
+      <dd>
+      LilyPond 2.2.1 has been released. It release a handful of bugs.
+      Download <a href="download/#2.2">here</a>.
+      </dd>
+
+      <dt>April 17, 2004</dt> <dd> LilyPond 2.2.0 is now available
+      on Windows, and should find its way to the Cygwin mirrors
+      soon</dd>
+      
+      <dt>April 12, 2004</dt> <dd> LilyPond 2.3.0 is the first release
+in the 2.3 cycle.  The focus for 2.3 is page layout, so
+instrumentalists can force parts to have page breaks at sane turning
+points.  This release is <em>experimental</em>; expect things to break!
+More info in the <a
+href="@DOC@/v2.3/Documentation/topdocs/out-www/NEWS.html">release
+notes</a>.  Download <a href="download/#2.3">here</a>.
+
 	
       </dl>
       <p align="right"><a href="old-news.html">older news...</a></p>
@@ -97,7 +91,7 @@
 	  
 	  <tr>
 	    <td>Stable</td>
-	    <td>2.2.0</td>
+	    <td>2.2.1</td>
 	    <td>
 	      <a href="../doc/v2.2/Documentation/out-www/">Documentation</a>,
 	      <a href="download/#2.2">download</a>.
