@@ -1,3 +1,7 @@
+2004-05-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* site/devel/participating/call-for-help.txt: add file.
+
 2004-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/index.html: Half-baken fix for javascript.
